<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RunListingActivity">

    <TextView
        android:id="@+id/runName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:text="@string/skill_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/runDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/runDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/runDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:layout_margin="15dp"/>
</LinearLayout>